<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_robot_interface</name>
  <version>1.0.0</version>
  <description>The rtt_gazebo_robot_interface package</description>

  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>

  <license>CeCILL-C</license>

  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtt</build_depend>
  <run_depend>rtt</run_depend>
  <build_depend>eigen</build_depend>
  <run_depend>eigen</run_depend>
  <build_depend>gazebo</build_depend>
  <run_depend>gazebo</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
