<?xml version="1.0"?>
<package format="2">
  <name>rtt_gazebo_robot_interface</name>
  <version>1.1.0</version>
  <description>The rtt_gazebo_robot_interface package</description>

  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>

  <license>CeCILL-C</license>

  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtt</depend>
  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>gazebo</depend>

</package>
